k8s/namespaces/staging1/mfe-boletagem/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mfe-boletagem
  name: mfe-boletagem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfe-boletagem
  template:
    metadata:
      labels:
        app: mfe-boletagem-configmap
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: mfe-common-configmap
        - configMapRef:
            name: mfe-boletagem-env
        image: sinqia.azurecr.io/fundos/sqfaas/mfe/boletagem:v16.1.0-rc.1
        imagePullPolicy: Always
        name: mfe-boletagem
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acr-secret
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
