k8s/namespaces/staging1/mfe-boletagem/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mfe-boletagem
  name: mfe-boletagem
  namespace: staging1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: mfe-boletagem
